CHANGES.txt - 2007-08-27
------------------------

CHANGES IN CUPS V1.4b1

	- Added generic PostScript and PCL printer driver PPDs.
	- Added new cupsGetPPD3() API to allow applications to
	  cache PPDs safely (STR #1473)
